2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_print.c: clarify that the buffer passed to read methods is only
	guaranteed to be 1024 bytes long (#62).

2014-09-13 Howard Butler <howard@hobu.co>
	* CMake: Support for INCODE build. If you need INCODE support,
	with the definitions compiled into headers, use CMake as your
	configuration/build platform.

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* csv: Override three Brazilian datum shifts on behalf of Daniel
	Miranda and the OSGeo Brazilian Chapter.

2014-09-13 Howard Butler <howard@hobu.co>
	* csv: Upgrade to EPSG 8.5

2014-07-30 Howard Butler <howard@hobu.co>
	* INCODE: Adapt Ben Adler's patch in #66 to add INCODE support to the
	CMake configuration

2014-07-30 Howard Butler <howard@hobu.co>
	* geo_normalize.c: #59, better Mercator_2SP support

2014-07-30 Howard Butler <howard@hobu.co>
	* geotifcp: Do not segfault when a TIFF file has WhitePoint set #65

2014-07-30 Howard Butler <howard@hobu.co>
	* geo_names.c: fix #67 -- add VerticalUnitsGeoKey

2014-05-16 Even Roualt <even.rouault@spatialys.com>
	* add_esri_column.py: manually replace D_SIRGAS-Chile by D_Peru96 for GCS_Peru96. Likely an error in the FileGDB SDK db (#63)

2014-05-14 Even Roualt <even.rouault@spatialys.com>
	* csv: Upgrade to EPSG 8.4

2013-05-08  Frank Warmerdam  <warmerdam@pobox.com>
	* tiffcp: Add bigtiff output support with the -8 flag like tiffcp.  Contributed by
	Mohannad Al-Durgham (nwgeo.com).

2013-10-01  Frank Warmerdam  <warmerdam@pobox.com>

	* csv: Upgrade to EPSG 8.2

2013-01-31  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/datum_shift_pref.csv: Force OSGB 1936 preferred datum shift.
	(http://trac.osgeo.org/gdal/ticket/4597)

2012-12-05  Frank Warmerdam  <warmerdam@pobox.com>

	* csv: Upgrade to EPSG 8.0

2012-10-17  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: GTIFGetEllipsoidInfo() - do not assume that
	CSVFilename()'s return result is long lived.  Caused errors looking