@@ -1,5 +1,7 @@
 2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* bin/geotifcp.c: added B, L, C and M flags from tiffcp (#68)"
+
 	* geo_print.c: clarify that the buffer passed to read methods is only
 	guaranteed to be 1024 bytes long (#62).
 
